--- a/backend/src/main/webapp/index.html
+++ b/backend/src/main/webapp/index.html
@@ -153,6 +153,9 @@
         <script src="bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap/scrollspy.js"></script>
         <script src="bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap/collapse.js"></script>
         <script src="bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap/tab.js"></script>
+        <script src="scripts/speaker/router_speaker.js"></script>
+        <script src="scripts/speaker/controller_speaker.js"></script>
+        <script src="scripts/speaker/service_speaker.js"></script>
         <!-- endbuild -->
 </body>
 </html>
