--- a/backend/src/main/webapp/uai-directives/uai-input-text.html
+++ b/backend/src/main/webapp/uai-directives/uai-input-text.html
@@ -1,4 +1,11 @@
-<div class="form-group">
+<div class="form-group" ng-class="{ 'has-error': name.$invalid && name.$dirty }">
     <label>{{label}}</label>
-    <input type="text" class="form-control" name="{{name}}" ng-model="{{ng-model}}">
+    <input type="text" class="form-control" name="{{name}}" ng-model="ngModel"
+    	ng-required="ngRequired"
+    	ng-maxlength="ngMaxlength"
+    	ng-minlength="ngMinlength"
+    	ng-pattern="ngPattern"
+    	ng-change="ngChange"
+    	ng-trim="ngTrim">
+    <span ng-show="!!myform.username.$error.isBlank">Username Required.</span>
 </div>
